The header text was jumping, but I fixed it.

--- a/src/App.css
+++ b/src/App.css
@@ -369,6 +369,7 @@ header {
   padding-right: 10px;
   font-size: 16px;
   width: 140px;
+  margin-top: 0.5rem;
   font-weight: 100;
   font-style: normal;
   font-family: "Atlas Grotesk Web", "Atlas Grotesk", "AtlasGrotesk",
@@ -411,11 +412,10 @@ header {
   font-weight: 600;
 }
 .why-dropbox:hover {
-  margin-bottom: -0.5rem;
   background-color: var(--clr-neutral-300);
-  height: auto;
 }
 .products {
+  margin-top: 0.5rem;
   color: black;
   height: 48px;
   font-weight: 100;
@@ -433,6 +433,7 @@ header {
   position: relative;
   color: black;
   height: 48px;
+  margin-top: 0.5rem;
   padding-left: 16px;
   padding-right: 16px;
   font-size: 16px;
@@ -480,10 +481,10 @@ header {
 .solutions:hover {
   margin-bottom: -0.5rem;
   background-color: var(--clr-neutral-300);
-  height: auto;
 }
 .pricing {
   color: black;
+  margin-top: 0.5rem;
   height: 48px;
   font-weight: 100;
   font-style: normal;
@@ -500,6 +501,7 @@ header {
 
 .global {
   color: black;
+  margin-top: 0.5rem;
   padding-left: 16px;
   padding-right: 16px;
 }
@@ -512,6 +514,7 @@ header {
     sans-serif;
   height: 48px;
   padding-left: 16px;
+  margin-top: 0.5rem;
   padding-right: 16px;
   width: 91.22px;
 }
@@ -553,10 +556,7 @@ header {
   font-weight: 600;
 }
 .contact:hover {
-  height: auto;
-  margin-bottom: -0.5rem;
   background-color: var(--clr-neutral-300);
-  height: auto;
 }
 .get-app {
   color: black;
@@ -565,8 +565,10 @@ header {
   font-family: "Atlas Grotesk Web", "Atlas Grotesk", "AtlasGrotesk",
     "Helvetica (Atlas Grotesk Fallback)", "Arial (Atlas Grotesk Fallback)",
     sans-serif;
-  padding-left: 16px;
-  padding-right: 16px;
+  margin-left: 5px;
+  margin-top: 0.5rem;
+  padding-left: 10px;
+  padding-right: 15px;
 }
 .get-app-div {
   position: absolute;
@@ -578,7 +580,7 @@ header {
 .get-app:hover .get-app-div {
   display: flex;
   margin-left: -7.8rem;
-  margin-top: 7.4rem;
+  margin-top: 8rem;
 
   opacity: 1;
 }
@@ -588,7 +590,7 @@ header {
     "Helvetica (Atlas Grotesk Fallback)", sans-serif,
     "Arial (Atlas Grotesk Fallback)";
   padding-left: 1rem;
-  padding-top: 0.7rem;
+  padding-top: 1rem;
   font-size: 12px;
   width: 220px;
   height: auto;
@@ -599,9 +601,7 @@ header {
   margin-bottom: 1rem;
 }
 .get-app:hover {
-  margin-bottom: -0.5rem;
   background-color: var(--clr-neutral-300);
-  height: auto;
 }
 .sign-up {
   color: black;
@@ -609,6 +609,7 @@ header {
   font-family: "Atlas Grotesk Web", "Atlas Grotesk", "AtlasGrotesk",
     "Helvetica (Atlas Grotesk Fallback)", "Arial (Atlas Grotesk Fallback)",
     sans-serif;
+  margin-top: 0.5rem;
   padding-left: 16px;
   padding-right: 16px;
 }
@@ -620,6 +621,7 @@ header {
 }
 .login {
   color: black;
+  margin-top: 0.5rem;
   height: 48px;
   font-family: "Atlas Grotesk Web", "Atlas Grotesk", "AtlasGrotesk",
     "Helvetica (Atlas Grotesk Fallback)", "Arial (Atlas Grotesk Fallback)",
@@ -633,6 +635,7 @@ header {
   background-color: var(--clr-neutral-300);
 }
 .get-started {
+  margin-top: 0.5rem;
   font-family: "Atlas Grotesk Web", "Helvetica (Atlas Grotesk Fallback)",
     "Raleway", "Roboto Slab", "Outfit", "Roboto", "Atlas Grotesk",
     "AtlasGrotesk", "Arial (Atlas Grotesk Fallback)", sans-serif;
@@ -640,9 +643,9 @@ header {
   grid-template-columns: 89.125px 24px;
   height: 40px;
   width: 165.125px;
-  margin-top: 0.2rem;
+
   justify-content: space-between;
-  margin-top: 0.2rem;
+
   padding-left: 4px;
   padding-right: 4px;
   /* Changed from 2rem */
